// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageBlock alt 1`] = `
<MediaBlock
  alt=""
  block={Object {}}
  blockProps={
    Object {
      "editorState": Object {},
      "entity": Object {
        "getData": [Function],
      },
      "entityConfig": Object {},
      "onChange": [Function],
    }
  }
  src="example.png"
>
  <label
    className="ImageBlock__field"
  >
    <p>
      Alt text
    </p>
    <input
      className="ImageBlock__field__input"
      onChange={[Function]}
      type="text"
      value="Test"
    />
  </label>
  <button
    className="button Tooltip__button"
  >
    Edit
  </button>
  <button
    className="button button-secondary no Tooltip__button"
  >
    Remove
  </button>
</MediaBlock>
`;

exports[`ImageBlock renders 1`] = `
<MediaBlock
  alt=""
  block={Object {}}
  blockProps={
    Object {
      "editorState": Object {},
      "entity": Object {
        "getData": [Function],
      },
      "entityConfig": Object {},
      "onChange": [Function],
    }
  }
  src="example.png"
>
  <label
    className="ImageBlock__field"
  >
    <p>
      Alt text
    </p>
    <input
      className="ImageBlock__field__input"
      onChange={[Function]}
      type="text"
      value=""
    />
  </label>
  <button
    className="button Tooltip__button"
  >
    Edit
  </button>
  <button
    className="button button-secondary no Tooltip__button"
  >
    Remove
  </button>
</MediaBlock>
`;
